글 작성 구조 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     password: sbs123414
   jpa:
     hibernate:
-      ddl-auto: create
+      #ddl-auto: create
   servlet:
     multipart:
       maxFileSize: 1000MB
